# video-sdk-gstreamer

./: LICENSE  NOTICE  README.md  build_install_vvas.sh  clean_vvas.sh  install_gst.sh  retrieve_gst_sources.sh  setup.sh
patches/: 0001-Update-Colorimetry-and-SEI-parsing-for-HDR10.patch  0001-Use-helper-function-to-map-colorimetry-parameters.patch  0001-build-Adapt-to-backwards-incompatible-change-in-GNU-.patch  0001-gst-plugins-base-Add-HDR10-support.patch
vvas-examples/: README.md
vvas-examples/DC/: README.md  meson.build  meson_options.txt
vvas-examples/DC/vvas_pipeline_scripts/filters/: 01_rotate_video.sh  02_logo_overlay.sh  README.rst
vvas-examples/DC/vvas_pipeline_scripts/quality_analysis/: README.rst  h264_ll_objective.sh  h264_ll_subjective.sh  h264_objective.sh  h264_subjective.sh  hevc_ll_objective.sh  hevc_ll_subjective.sh  hevc_objective.sh  hevc_subjective.sh  measure_vq.sh
vvas-examples/DC/vvas_pipeline_scripts/tutorials/: 01_gst_decode_only.sh  (+13 more)
vvas-examples/DC/vvas_xabrladder/: Makefile  README.md  abrladder.json  meson.build
vvas-examples/DC/vvas_xcompositor/: Makefile  README.md  meson.build
vvas-gst-plugins/: README.md  meson.build  meson_options.txt
vvas-gst-plugins/gst-libs/gst/vvas/: gstvvasallocator.c  gstvvasallocator.h  gstvvasbufferpool.c  gstvvasinpinfer.h  gstvvaslameta.c  gstvvaslameta.h  meson.build
vvas-gst-plugins/sys/: meson.build
vvas-gst-plugins/sys/abrscaler/: gstvvas_xabrscaler.c  gstvvas_xabrscaler.h  meson.build  multi_scaler_hw.h
vvas-gst-plugins/sys/lookahead/: gstvvas_xlookahead.c  krnl_mot_est_hw.h  meson.build
vvas-gst-plugins/sys/lookahead/la_algo/: xlnx_aq_common.h  xlnx_aq_core.c  xlnx_aq_core.h  xlnx_la_defines.h  xlnx_la_plg_ext.h  xlnx_queue.c  xlnx_queue.h  xlnx_rc_aq.c  xlnx_rc_aq.h  xlnx_spatial_aq.c  xlnx_spatial_aq.h
vvas-gst-plugins/sys/vcudec/: gstvvas_xvcudec.c  gstvvas_xvcudec.h  meson.build
vvas-gst-plugins/sys/vcuenc/: gstvvas_xvcuenc.c  gstvvas_xvcuenc.h  meson.build
vvas-utils/: README.md  meson.build
vvas-utils/utils/: meson.build  vvas_kernel_utils.c  xrt_utils.c  xrt_utils.h
vvas-utils/utils/vvas/: vvas_kernel.h
(+4 files in other folders)
